# AmzBooks

./: .gitignore  AI_CONTEXT.md  CMakeLists.txt  READ_ME_DATA.md
.antigravity/rules/: qt.md
.antigravity/skills/anonymise_data/: SKILL.md
.antigravity/skills/anonymise_data/scripts/: anonymise_data.py
AmzBooks/: CMakeLists.txt  main.cpp
AmzBooks/gui/: DialogCompanyInfos.cpp  DialogCompanyInfos.h  DialogCompanyInfos.ui  MainWindow.ui  gui.cmake
AmzBooks/gui/delegates/: ComboBoxDelegate.cpp  ComboBoxDelegate.h
AmzBooks/gui/dialogs/: DialogAddVatNumber.cpp  DialogAddVatNumber.h  DialogAddVatNumber.ui  DialogAddVatRate.cpp  DialogAddVatRate.h  DialogAddVatRate.ui
AmzBooks/gui/panes/: PaneSettings.cpp  PaneSettings.ui  PaneSettingsCompany.cpp  PaneSettingsCompany.h  PaneSettingsCompany.ui  PaneSettingsVatRates.cpp  PaneSettingsVatRates.h  PaneSettingsVatRates.ui  panes.cmake
AmzBooksAutoTests/: CMakeLists.txt  ValidationBlacklist.h  test_book_accounts.cpp  test_book_entries.cpp  test_currencies.cpp  test_file_import_amazon.cpp  test_order_manager.cpp  test_orders.cpp  test_tax_resolver.cpp  test_vat_rate.cpp  tst_book_entries.cpp  tst_currencies.cpp  tst_journal_table.cpp  tst_testBookAccounts.cpp  tst_test_tax_resolver.cpp  tst_test_vat_rate.cpp  tst_testordermanager.cpp  tst_testorders.cpp
AmzBooksLib/: AmzBooksLib.cpp  AmzBooksLib.h  CMakeLists.txt  CountriesEu.cpp  CountriesEu.h  CurrencyRateManager.cpp  CurrencyRateManager.h  ExceptionRateCurrency.cpp  ExceptionRateCurrency.h
AmzBooksLib/books/: Activity.cpp  Activity.h  CompanyAddressTable.cpp  CompanyAddressTable.h  CompanyInfoException.cpp  CompanyInfoException.h  CompanyInfosTable.cpp  CompanyInfosTable.h  ExceptionBookEquality.cpp  ExceptionBookEquality.h  ExceptionCompanyInfo.cpp  ExceptionCompanyInfo.h  ExceptionFileError.cpp  ExceptionFileError.h  ExceptionTaxSchemeInvalid.cpp  ExceptionTaxSchemeInvalid.h  ExceptionVatAccount.cpp  ExceptionVatAccount.h  ExceptionVatAccountExisting.cpp  ExceptionVatAccountExisting.h  FbaCentersTable.cpp  FbaCentersTable.h  JournalEntry.cpp  JournalEntry.h  JournalEntryFactory.cpp  JournalEntryFactory.h  JournalTable.cpp  JournalTable.h  PurchaseBookAccountsTable.cpp  PurchaseBookAccountsTable.h  PurchaseInvoiceManager.cpp  PurchaseInvoiceManager.h  SaleBookAccountsTable.cpp  SaleBookAccountsTable.h  TaxJurisdictionLevel.h  TaxResolver.h  TaxSchemeInvalidException.cpp  TaxSchemeInvalidException.h  VatAccountExistingException.cpp  VatAccountExistingException.h  (+7 more)
AmzBooksLib/model/: Activity.cpp  Activity.h  ActivitySource.h  ActivityUpdate.h  Address.cpp  Address.h  Amount.cpp  Amount.h  InvoicingInfo.cpp  InvoicingInfo.h  LineItem.cpp  LineItem.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  Refund.cpp  Refund.h  Result.cpp  Result.h  SaleType.cpp  SaleType.h  Shipment.cpp  Shipment.h  TaxJurisdictionLevel.cpp  TaxJurisdictionLevel.h  TaxResolver.cpp  TaxResolver.h  TaxScheme.cpp  TaxScheme.h  TaxSource.cpp  TaxSource.h  VatResolver.cpp  VatResolver.h  VatTerritoryResolver.cpp  VatTerritoryResolver.h  model.cmake
AmzBooksLib/orders/: AbstractImporter.cpp  AbstractImporter.h  AbstractImporterApi.cpp  AbstractImporterApi.h  AbstractImporterFile.cpp  AbstractImporterFile.h  ActivitySource.h  ActivitySourceType.cpp  ActivitySourceType.h  ActivityUpdate.cpp  Address.h  ExceptionParamValue.cpp  ExceptionParamValue.h  ImporterApiAmazon.cpp  ImporterApiAmazon.h  ImporterApiAmazonAmerica.cpp  ImporterApiAmazonAmerica.h  ImporterApiAmazonEu.cpp  ImporterApiAmazonEu.h  ImporterApiCommerceHQ.cpp  ImporterApiCommerceHQ.h  ImporterApiTemu.cpp  ImporterApiTemu.h  ImporterApiTemuEu.cpp  ImporterApiTemuEu.h  ImporterFileAmazonVatEu.cpp  ImporterFileAmazonVatEu.h  InvoicingInfo.cpp  InvoicingInfo.h  LineItem.cpp  LineItem.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  OrderManager_sql_schema.h  Refund.cpp  Shipment.cpp  Shipment.h  TaxSource.h  (+1 more)
